--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ requires-python = ">=3.11"
 dependencies = [
     "pyserial>=3.5",
     "mcp>=1.1.2",
+    "pyyaml>=6.0.1",
 ]
 
 [project.scripts]
