--- a/config.yaml
+++ b/config.yaml
@@ -8,7 +8,7 @@ serial:
 commands:
   # PWM控制命令
   set_pwm:
-    command: "PWM {frequency}\r\n"  # 实际发送的命令格式
+    command: "PWM {frequency}"  # 实际发送的命令格式，server会自动添加\r\n
     need_parse: false  # 不需要解析响应内容
     prompts:
       - "把PWM调到最大"
@@ -19,7 +19,7 @@ commands:
 
   # PICO信息查询命令
   get_pico_info:
-    command: "PICO_INFO\r\n"  # 实际发送的命令格式
+    command: "PICO_INFO"  # 实际发送的命令格式，server会自动添加\r\n
     need_parse: true  # 需要解析响应内容
     prompts:
       - "查询Pico板信息"
@@ -27,7 +27,7 @@ commands:
 
   # LED控制命令示例
   led_control:
-    command: "LED {state}\n"  # state可以是on/off或其他值
+    command: "LED {state}"  # state可以是on/off或其他值，server会自动添加\r\n
     need_parse: false
     prompts:
       - "打开LED"
