--- a/Pico_config.yaml
+++ b/Pico_config.yaml
@@ -1,15 +1,15 @@
 serial:
   # 串口配置
-  port: LOOP_BACK  # 可选，如果不指定则自动查找。设置为LOOP_BACK时启用回环模式，发送什么就接收什么
+  port: COM11  # 可选，如果不指定则自动查找。设置为LOOP_BACK时启用回环模式，发送什么就接收什么
   baud_rate: 115200  # 可选，默认 115200
   timeout: 1.0  # 可选，默认 1.0
   read_timeout: 1.0  # 读取超时时间，1秒内不应答则报错
-  response_start_string: CMD  # 可选，串口应答的开始字符串，默认为OK
+  response_start_string: OK  # 可选，串口应答的开始字符串，默认为OK
 
 commands:
   # PWM控制命令
   set_pwm:
-    command: "CMD_PWM {frequency}"  # 实际发送的命令格式，server会自动添加\r\n
+    command: "PWM {frequency}"  # 实际发送的命令格式，server会自动添加\r\n
     need_parse: false  # 不需要解析响应内容
     prompts:
       - "把PWM调到最大"
@@ -20,7 +20,7 @@ commands:
 
   # PICO信息查询命令
   get_pico_info:
-    command: "CMD_PICO_INFO"  # 实际发送的命令格式，server会自动添加\r\n
+    command: "PICO_INFO"  # 实际发送的命令格式，server会自动添加\r\n
     need_parse: true  # 需要解析响应内容
     prompts:
       - "查询Pico板信息"
@@ -28,7 +28,7 @@ commands:
 
   # LED控制命令示例
   led_control:
-    command: "CMD_LED {state}"  # state可以是on/off或其他值，server会自动添加\r\n
+    command: "LED {state}"  # state可以是on/off或其他值，server会自动添加\r\n
     need_parse: false
     prompts:
       - "打开LED"
